spectogram and metafiels adjusted according to Jorgs comments

--- a/Interactive_plot.ipynb
+++ b/Interactive_plot.ipynb
@@ -48,12 +48,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cab1e6aac190494c9825cfb02db4c775",
+       "model_id": "223bf410be0c40d3b0a773de2d978da3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='Wav files:', options=('wav_files/2015-11-10--15-25.wav', 'wav_files/2017-02-04--10-14-06…"
+       "Dropdown(description='Wav files:', options=('wav_files/2015-11-10--15-25.wav', 'wav_files/2017-02-04--10-25-15…"
       ]
      },
      "metadata": {},
@@ -63,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wav_files/2017-02-04--10-14-06--00-16-35--BC.wav\n"
+      "wav_files/2017-02-04--10-25-15--00-05-25--C.wav\n"
      ]
     }
    ],
@@ -149,15 +149,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of data points: 99500996, fs: 100000 Hz, resulting file length: 16.583499333333332 min.\n"
+      "Number of data points: 32500326, fs: 100000 Hz, resulting file length: 5.416721 min.\n"
      ]
     }
    ],
    "source": [
     "# Read in wav\n",
     "filename = directory + file[0]\n",
-    "y, sr = librosa.load(filename, sr=sample_rate)\n",
+    "y_all, sr=librosa.load(filename, sr=sample_rate, mono=False)\n",
+    "y=y_all[0]\n",
     "print('Number of data points: {}, fs: {} Hz, resulting file length: {} min.'.format(np.shape(y)[0], sr, np.shape(y)[0]/sr/60))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.02192914,  0.00633857, -0.01353262, ..., -0.04321598,\n",
+       "       -0.04496078,  0.        ], dtype=float32)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
    ]
   },
   {
@@ -175,7 +197,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "071765766bc243dcb8fc655cd62f293b",
+       "model_id": "c923842f68a64825a38e90a59e46b77a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -185,6 +207,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/saroltagabulya/Library/Python/3.8/lib/python/site-packages/librosa/util/utils.py:198: UserWarning: librosa.util.frame called with axis=-1 on a non-contiguous input. This will result in a copy.\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
@@ -203,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,26 +315,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 60000000\n",
-      "60000000 99500996\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-bb720258a04c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0monset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msegment_boundaries\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0moffset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msegment_boundaries\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "0 32500327\n"
      ]
     }
    ],
@@ -324,7 +342,11 @@
     "            offset=np.shape(y)[0]\n",
     "        y_list.append(y[onset:offset])\n",
     "        print(onset, offset)\n",
-    "        "
+    "else:\n",
+    "    onset=0\n",
+    "    offset=np.shape(y)[0] +1\n",
+    "    print(onset, offset)\n",
+    "    y_list.append(y[onset:offset])"
    ]
   },
   {
@@ -334,8 +356,29 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "[array([ 0.02192914,  0.00633857, -0.01353262, ..., -0.04321598,\n",
+       "        -0.04496078,  0.        ], dtype=float32)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1cfe9857e1f414b98b9f22521592e59",
+       "model_id": "5db19fd9bfb448d6bd69e6c27c9651e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -351,27 +394,6 @@
      "output_type": "stream",
      "text": [
       "0\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b37cd208a2049d8b08e0a42ec30d3a8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
      ]
     }
    ],
@@ -392,51 +414,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>onset</th>\n",
+       "      <th>offset</th>\n",
+       "      <th>filename</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>168.038552</td>\n",
+       "      <td>168.877281</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/wav_files/2017-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>173.909653</td>\n",
+       "      <td>176.216157</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/wav_files/2017-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>180.095277</td>\n",
+       "      <td>182.454201</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/wav_files/2017-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>187.801096</td>\n",
+       "      <td>190.133810</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/wav_files/2017-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>201.771171</td>\n",
+       "      <td>203.710731</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/wav_files/2017-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>210.027406</td>\n",
+       "      <td>212.622223</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/wav_files/2017-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>257.467997</td>\n",
+       "      <td>260.665650</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/wav_files/2017-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>277.335382</td>\n",
+       "      <td>279.982619</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/wav_files/2017-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>283.783109</td>\n",
+       "      <td>285.906141</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/wav_files/2017-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>303.139394</td>\n",
+       "      <td>306.205995</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/wav_files/2017-...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(250, 77151)"
+       "        onset      offset                                           filename\n",
+       "0  168.038552  168.877281  /Users/saroltagabulya/git/Orca/wav_files/2017-...\n",
+       "1  173.909653  176.216157  /Users/saroltagabulya/git/Orca/wav_files/2017-...\n",
+       "2  180.095277  182.454201  /Users/saroltagabulya/git/Orca/wav_files/2017-...\n",
+       "3  187.801096  190.133810  /Users/saroltagabulya/git/Orca/wav_files/2017-...\n",
+       "4  201.771171  203.710731  /Users/saroltagabulya/git/Orca/wav_files/2017-...\n",
+       "5  210.027406  212.622223  /Users/saroltagabulya/git/Orca/wav_files/2017-...\n",
+       "6  257.467997  260.665650  /Users/saroltagabulya/git/Orca/wav_files/2017-...\n",
+       "7  277.335382  279.982619  /Users/saroltagabulya/git/Orca/wav_files/2017-...\n",
+       "8  283.783109  285.906141  /Users/saroltagabulya/git/Orca/wav_files/2017-...\n",
+       "9  303.139394  306.205995  /Users/saroltagabulya/git/Orca/wav_files/2017-..."
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.shape(spect[0:250, :])"
+    "time_stamps"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -491,6 +584,99 @@
    "source": [
     "### Make sure to save time_stamps as csv by clicking s on graph!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "import time\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'18816 days, 19:34:16.807788'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(datetime.timedelta(seconds=ts))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2021, 7, 8, 21, 37, 44, 367900)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.datetime.today() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2021, 7, 8, 21, 37, 44)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.datetime.strptime('2021-07-08--21-37-44', '%Y-%m-%d--%H-%M-%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
