--- a/Spectograms.ipynb
+++ b/Spectograms.ipynb
@@ -38,12 +38,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06b2179c8d9f44b88b0a0d3c5dd2230e",
+       "model_id": "1de8e4cfefe0488792d1de6235a5dc2d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='CSV files:', options=('.DS_Store', '.ipynb_checkpoints', '2017-02-04--10-14-06--00-16-35…"
+       "Dropdown(description='CSV files:', options=('.DS_Store', '2017-02-04--10-25-15--00-05-25--C', '.ipynb_checkpoi…"
       ]
      },
      "metadata": {},
@@ -53,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-02-04--10-14-06--00-16-35--BC\n"
+      "2017-02-04--10-25-15--00-05-25--C\n"
      ]
     }
    ],
@@ -92,14 +92,16 @@
     {
      "data": {
       "text/plain": [
-       "['17-02-04--10-28-45--00-00-03--BC.wav',\n",
-       " '17-02-04--10-29-32--00-00-04--BC.wav',\n",
-       " '17-02-04--10-28-22--00-00-03--BC.wav',\n",
-       " '17-02-04--10-28-15--00-00-03--BC.wav',\n",
-       " '17-02-04--10-28-08--00-00-03--BC.wav',\n",
-       " '17-02-04--10-30-17--00-00-04--BC.wav',\n",
-       " '17-02-04--10-29-58--00-00-04--BC.wav',\n",
-       " '17-02-04--10-28-36--00-00-03--BC.wav']"
+       "['2017-02-04--10-28-15--00-00-03--C.wav',\n",
+       " '2017-02-04--10-28-45--00-00-03--C.wav',\n",
+       " '2017-02-04--10-29-32--00-00-04--C.wav',\n",
+       " '2017-02-04--10-30-18--00-00-04--C.wav',\n",
+       " '2017-02-04--10-28-22--00-00-04--C.wav',\n",
+       " '2017-02-04--10-28-08--00-00-04--C.wav',\n",
+       " '2017-02-04--10-28-03--00-00-01--C.wav',\n",
+       " '2017-02-04--10-29-58--00-00-03--C.wav',\n",
+       " '2017-02-04--10-28-36--00-00-03--C.wav',\n",
+       " '2017-02-04--10-29-52--00-00-03--C.wav']"
       ]
      },
      "execution_count": 3,
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,27 +170,36 @@
     "\n",
     "    ref=metadata['reference_value']\n",
     "    raw_unit=metadata['raw_signal_unit']\n",
-    "    onset_utc=metadata['onset_absolute_utc']\n",
+    "    start_utc=metadata['start_utc']\n",
     "    duration_seconds=metadata['duration_seconds']\n",
+    "    \n",
+    "    nfft=1024\n",
+    "    hop_length=32\n",
+    "    win_length=400\n",
     "    \n",
     "    if len(y)>0:\n",
     "        # Convert to spectogram \n",
     "        \n",
-    "        Y = librosa.stft(y, n_fft=1024, hop_length=32, win_length=400) \n",
+    "        Y = librosa.stft(y, n_fft=nfft, hop_length=hop_length, win_length=win_length) \n",
     "        Ydb = librosa.amplitude_to_db(abs(Y), ref=1)\n",
     "        \n",
     "        librosa.display.specshow(Ydb, cmap='seismic', sr=sr, x_axis='time', y_axis='fft', hop_length=32)\n",
     "        \n",
-    "        plt.colorbar()\n",
-    "        plt.xlabel('time(seconds)')\n",
-    "        plt.ylabel('dB relative to {} {}^2'.format(ref, raw_unit))\n",
-    "        plt.title('onset: {} (UTC) \\nduration: {} seconds'.format(onset_utc, duration_seconds))\n",
+    "        cb=plt.colorbar()\n",
+    "        cb.set_label('Power [dB re to {} {}^2]'.format(ref, raw_unit), rotation=270, labelpad=+15)\n",
+    "\n",
+    "        plt.xlabel('Time [s]')\n",
+    "        plt.ylabel('Frequency [kHz]'.format(ref, raw_unit))\n",
+    "        ticks, labels = plt.yticks()\n",
+    "        plt.yticks(ticks, [str(t / 1000) for t in ticks])\n",
+    "        plt.title('onset: {} (UTC) \\nduration: {} seconds'.format(start_utc, duration_seconds))\n",
+    "        \n",
     "\n",
     "        # Save spectograms\n",
-    "        plt.savefig(file[:-3] + 'png', bbox_inches='tight', dpi=600)\n",
+    "        plt.savefig(file[:-3] + 'png', bbox_inches='tight', dpi=600, facecolor='White')\n",
     "        plt.close()\n",
     "    \n",
-    "        return Ydb\n",
+    "        return nfft, hop_length, win_length\n",
     "    \n",
     "    else: \n",
     "        return 'Error with wav'"
@@ -203,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +228,9 @@
       "4\n",
       "5\n",
       "6\n",
-      "7\n"
+      "7\n",
+      "8\n",
+      "9\n"
      ]
     }
    ],
@@ -226,7 +239,38 @@
     "    print(w)\n",
     "    wav=wavs[w]\n",
     "    y, sr =open_wav(wav, sample_rate)\n",
-    "    wav_to_spect(y, sample_rate, wav)"
+    "    nfft, hop_length, win_length= wav_to_spect(y, sample_rate, wav)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create spect_meta file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spect_meta={}\n",
+    "\n",
+    "spect_meta['nfft']=nfft\n",
+    "spect_meta['hop_length']=hop_length\n",
+    "spect_meta['win_length']=win_length\n",
+    "spect_meta['sample_rate']=sr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('spect_meta.yml', 'w') as outfile:\n",
+    "    yaml.dump(spect_meta, outfile)"
    ]
   },
   {
